feat: UI changes from rule to policy

--- a/webapp/src/app/pacman-features/modules/admin/create-rule/create-rule.component.html
+++ b/webapp/src/app/pacman-features/modules/admin/create-rule/create-rule.component.html
@@ -346,14 +346,14 @@
 
                                             <label>Rule Parameters
                                                 <span
-                                                    *ngIf="allRuleParamKeys.indexOf(parametersInput.ruleKey.trim())!=-1"
+                                                    *ngIf="allRuleParamKeys.indexOf(parametersInput.policyKey.trim())!=-1"
                                                     class="not-available">(Key already added)</span>
                                             </label>
                                             <div class="input-box">
                                                 <ul class="parameters input-wrapper">
                                                     <input type="text" autocomplete="off" class="inputarea-container"
                                                         placeholder="Enter Key" name="ruleParamKey"
-                                                        [(ngModel)]="parametersInput.ruleKey">
+                                                        [(ngModel)]="parametersInput.policyKey">
                                                 </ul>
                                                 <ul class="parameters input-wrapper">
                                                     <input type="text" autocomplete="off" class="inputarea-container"
@@ -367,7 +367,7 @@
                                                 </ul>
                                                 <ul class="parameters">
                                                     <button class="tmbutton bm20 ib"
-                                                        [disabled]="!(parametersInput.ruleKey&&parametersInput.ruleValue&&allRuleParamKeys.indexOf(parametersInput.ruleKey.trim())==-1)"
+                                                        [disabled]="!(parametersInput.policyKey&&parametersInput.ruleValue&&allRuleParamKeys.indexOf(parametersInput.policyKey.trim())==-1)"
                                                         (click)="addRuleParameters(parametersInput, isRuleParamEncrypted)"><i
                                                             class="fa fa-plus"></i> Add</button>
                                                 </ul>
@@ -400,12 +400,12 @@
                                                                 <div currentTable
                                                                     class="data-table-inner-content data-table-current">
                                                                     <div class="data-table-rows flex flex-around flex-align-center"
-                                                                        *ngFor="let ruleParams of allRuleParams; let ruleParamsIndex = index;">
+                                                                        *ngFor="let policyParams of allRuleParams; let policyParamsIndex = index;">
                                                                         <div
                                                                             class="row-cells1 row-cells table-cells flex flex-align-center">
                                                                             <div class="column-wrapper">
                                                                                 <div class='nowrap-ellipsis'>
-                                                                                    {{ruleParams.key}}
+                                                                                    {{policyParams.key}}
                                                                                 </div>
                                                                             </div>
                                                                         </div>
@@ -414,7 +414,7 @@
                                                                             <div class="column-wrapper">
                                                                                 <div class='nowrap-ellipsis'>
                                                                                     <span
-                                                                                        *ngIf="!ruleParams.encrypt; else elseBlock">{{ruleParams.value}}</span>
+                                                                                        *ngIf="!policyParams.encrypt; else elseBlock">{{policyParams.value}}</span>
                                                                                     <ng-template #elseBlock>
                                                                                         XXXX <span
                                                                                             class="highlight-pink">(Encrypted)</span>
@@ -428,7 +428,7 @@
                                                                             <div class="column-wrapper">
                                                                                 <div class='nowrap-ellipsis'>
                                                                                     <a
-                                                                                        (click)="removeRuleParameters(ruleParamsIndex)"><i
+                                                                                        (click)="removeRuleParameters(policyParamsIndex)"><i
                                                                                             class="highlight-pink fa fa-remove"></i></a>
                                                                                 </div>
                                                                             </div>
