--- a/webapp/src/app/pacman-features/secondary-components/policy-violation-desc/policy-violation-desc.component.html
+++ b/webapp/src/app/pacman-features/secondary-components/policy-violation-desc/policy-violation-desc.component.html
@@ -17,7 +17,7 @@
         <div class="policy-violation-label-header capitalize">
             Policy Violated
         </div>
-        <div class="policy-violation-label-content anchor-link pointer" title="{{violationData.policyViolated}}" (click)="navigateTo('policy knowledgebase details',violationData.ruleId)">
+        <div class="policy-violation-label-content anchor-link pointer" title="{{violationData.policyViolated}}" (click)="navigateTo('policy knowledgebase details',violationData.policyId)">
             {{violationData.policyViolated}}
         </div>
     </div>
