--- a/webapp/src/app/pacman-features/modules/admin/policies/policies.component.html
+++ b/webapp/src/app/pacman-features/modules/admin/policies/policies.component.html
@@ -24,10 +24,18 @@
             <ul>
                 <li class="widget-wrapper relative">
                     <div class="relative">
-                        <app-data-table [searchTextValues]=searchTxt [showGenericMessage]='showGenericMessage' [errorValue]='errorValue' [parentName]="'taggingTargetMessage'" [showingArr]='showingArr' [outerArr]='outerArr' [searchableHeader]='true' [allColumns]='allColumns'
+                        <!-- <app-data-table [searchTextValues]=searchTxt [showGenericMessage]='showGenericMessage' [errorValue]='errorValue' [parentName]="'taggingTargetMessage'" [showingArr]='showingArr' [outerArr]='outerArr' [searchableHeader]='true' [allColumns]='allColumns'
                             [dataHead]="'All Policies'" (selectedRow)='goToDetails($event)' [firstPaginator]='firstPaginator' [lastPaginator]='lastPaginator' [totalRows]='totalRows' [currentPointer]='currentPointer' (searchRowTxt)='searchCalled($event)' (previousPageCalled)='prevPage()'
                             (nextPageCalled)='nextPage()' (searchTriggerred)='callNewSearch()'>
-                        </app-data-table>
+                        </app-data-table> -->
+                        <app-table style="height: 100%; width: 100%;" (rowSelectEventEmitter)="goToDetails($event)"
+                            [data]="tableData" [columnWidths]="columnWidths" (headerColNameSelected)="handleHeaderColNameSelection($event)" 
+                            [headerColName]="headerColName" [direction]="direction" [whiteListColumns]="whiteListColumns"
+                            [imageDataMap]="tableImageDataMap" (searchCalledEventEmitter)="callNewSearch($event)"
+                            [searchQuery]="searchTxt" (nextPageCalled)="nextPage($event)" [tableErrorMessage]='errorMessage'
+                            [showSearchBar]="true" [showDownloadBtn]="false" [showAddRemoveCol]="false" [showFilterBtn]="false" [onScrollDataLoader]="onScrollDataLoader" [totalRows]="totalRows"
+                            [tableScrollTop]="tableScrollTop" [tableDataLoaded]="tableDataLoaded" [columnsSortFunctionMap]="columnsSortFunctionMap">
+                        </app-table>
                         <div class="data-table-desc">{{dataTableDesc}}</div>
                     </div>
                     <div *ngIf='showLoader' class='loader absolute'></div>
